# studyTogether

./: .env.example  .gitignore  API.md  CLAUDE.md  RAILWAY-DEPLOYMENT.md  docker-compose.yml  railway.backend.json  research.md
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  railway.json  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_call_tables.py  003_add_study_room_tables.py  004_add_friendships_table.py
backend/app/: dependencies.py  main.py
backend/app/api/: __init__.py  auth.py  calls.py  friends.py  locations.py  sessions.py  study_rooms.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  call.py  friendship.py  location.py  session.py  study_room.py  user.py
backend/app/schemas/: __init__.py  auth.py  call.py  friendship.py  location.py  session.py  study_room.py  user.py
backend/app/services/: __init__.py  auth_service.py  call_service.py  friendship_service.py  location_service.py  session_service.py  study_room_service.py
backend/app/socket/: __init__.py  call_handler.py  friend_handler.py  study_room_handler.py
backend/tests/: conftest.py  test_auth.py  test_friendship.py  test_locations.py
codemaps/: architecture.md  backend.md  data.md  frontend.md
frontend/: .dockerignore  .env.local.example  Dockerfile  all-tests-output.txt  amap.d.ts  next.config.js  package-lock.json  package.json  playwright-results.json  playwright-results.xml  playwright.config.ts  railway.json  test-results-home.json  (+1 more)
(+67 files in other folders)
